# sistema-de-seguranca-de-gotham

./: .gitignore  README.md  app.py  database.py  index.html  pyproject.toml  requeriments.txt  usuario.html
Sistema de Gerenciamento de Segurança/: index.html
backend/: server.js
css/: estilo.css
instance/: db_projeto.db
js/: modulo.js
pages/: usuario.html
paginas/: configuracoes.html  dashboard.html  dispositivos.html  inventario.html  relatorios.html  usuario.html  veiculos.html
static/css/: estilo.css
static/js/: modulo.js
templates/: base.html  configuracoes.html  dashboard.html  dispositivos.html  index.html  inventario.html  veiculos.html
