[tool.poetry]
name = "sistema-de-seguranca-de-gotham"
version = "0.1.0"
description = ""
authors = ["Joilson Alves <joilson.alvesdev@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
sqlalchemy = "^2.0.20"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"